[Backend] Alerting: Update JUnit tests
Reviewed-by: Alex Belke <233420507+alexbelkedev@users.noreply.github.com>
Reviewed-by: Stefan Feilmeier <3515268+sfeilmeier@users.noreply.github.com>
Co-authored-by: Kai Jeschek <99220919+da-Kai@users.noreply.github.com>
Co-committed-by: Kai Jeschek <99220919+da-Kai@users.noreply.github.com>